# v-14-mine

./: README-CN.md  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
classify/: __init__.py  board_detector.py  classifier.py
core/: __init__.py  constants.py  solver.py  variant_rules.py
gui/: __init__.py  constants.py  game_state.py  presenter.py  pygame_gui.py  pyqt_gui.py
models/: __init__.py  game_state.py
test/: test-1.txt  test-2.txt
